WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37692
[chromium] ignore IME events if the keydown event was prevented
https://bugs.webkit.org/show_bug.cgi?id=37692
Summary
[chromium] ignore IME events if the keydown event was prevented
Tony Chang
Reported
2010-04-15 19:22:13 PDT
[chromium] ignore IME events if the keydown event was prevented
Attachments
Patch
(1.30 KB, patch)
2010-04-15 19:24 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(3.30 KB, patch)
2010-05-09 18:32 PDT
,
Tony Chang
ojan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-04-15 19:24:55 PDT
Created
attachment 53504
[details]
Patch
Tony Chang
Comment 2
2010-04-15 19:26:08 PDT
Discussion of this bug can be found
http://code.google.com/p/chromium/issues/detail?id=9883
and a review by hbono and suzhe can be found
http://codereview.chromium.org/1630015/show
Tony Chang
Comment 3
2010-04-15 19:27:18 PDT
Oh, and no layout test because I don't know how to test IME behavior changes. I guess at some point we should build functionality into eventSender to send IME events.
Jian Li
Comment 4
2010-04-20 16:14:40 PDT
Comment on
attachment 53504
[details]
Patch Generally looks good. Do we have a layout test for this?
Tony Chang
Comment 5
2010-04-20 19:47:01 PDT
(In reply to
comment #4
)
> (From update of
attachment 53504
[details]
) > Generally looks good. Do we have a layout test for this?
Since posting
comment #3
, I learned about textInputController, so I tried to write a layout test. However, this doesn't work since textInputController call methods directly on WebFrame and this check is in WebView. I don't think it would make sense to move this check into WebFrame (since WebView knows about the state and does similar checks). Maybe we could change textInputController.setMarkedText to call WebView::handleCompositionEvent instead, but that seems to deviate from DRT mac. It's not clear to me that that's what we want either.
Eric Seidel (no email)
Comment 6
2010-05-08 23:28:52 PDT
Comment on
attachment 53504
[details]
Patch How do we test this?
Tony Chang
Comment 7
2010-05-09 18:32:49 PDT
Created
attachment 55514
[details]
Patch
Tony Chang
Comment 8
2010-05-09 18:33:33 PDT
(In reply to
comment #6
)
> (From update of
attachment 53504
[details]
) > How do we test this?
Since I wasn't able to write a layout test for it, I've added a manual test.
Tony Chang
Comment 9
2010-05-18 19:33:19 PDT
Committed
r59735
: <
http://trac.webkit.org/changeset/59735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug