2010-05-18  Tony Chang  <tony@chromium.org>

Reviewed by Ojan Vafai.

        [chromium] ignore IME events if the keydown event was prevented
        https://bugs.webkit.org/show_bug.cgi?id=37692

        A manual test to verify the IME behavior since the existing methods of
        textInputController test at a lower level than the fix.

        * manual-tests/ime-keydown-preventdefault.html: Added.
2010-05-18  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        [chromium] ignore IME events if the keydown event was prevented
        https://bugs.webkit.org/show_bug.cgi?id=37692

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleCompositionEvent):

Canonical link: https://commits.webkit.org/50853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59735 268f45cc-cd09-0410-ab3c-d52691b4dbfc